2003-11-13  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* test/attype.00.smi, test/smartstest.txt: Updated with tests from
	SMARTS bug reports PR#776094 and 796649. (Not problems in the
	current CVS code, but added as new test cases anyway.)

	* test/ringtest.cpp, test/smartstest.cpp: Allow generation of the
	results files.

	* test/ringresults.txt, test/smartsresults.txt: Generated from
	above. (Current implementation validates previous results as well
	as new patterns above.)

	* src/atomtyp.txt: Add Sybyl typing for phenol oxygens and ester
	sp3 oxygens.

	* src/aromatic.txt: Remove phosphole from aromatic patterns, add
	selenophene. (Phosphole is a classic non-aromatic system due to
	the non-planar P atom.)

	* src/aromatic.h, src/atomtyp.h, src/extable.h: Autogenerated.

2003-11-12  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* configure, */Makefile.in: Regenerated using automake-1.7.8,
	autoconf-2.58, libtool-1.5. (Should solve problems with CVS
	versions needing to call autoconf/automake due to timestamps.)
	Added AM_MAINTAINER_MODE.

	* aclocal.m4: Put this back in CVS so aclocal isn't needed to
	generate from CVS.

	* src/Makefile.am: Add back targets for generating binary .h files
	from the appropriate .txt data files.
	
	* src/parsmi.cpp: Back out Chris Morley's SMILES extensions for
	radicial centers--current causes many SMILES/SMARTS errors.

	* test/main.cpp, test/roundtrip.cpp: Add comments on additional
	tests needed soon. (These are all in the project tracker for
	Release-2.0 roadmap too.)

	* test/smartstest.cpp: Improve debugging information on
	errors--give the first atom matching if we have a match, even if
	it's not the number of matches expected by the results.

	* test/test-set.sh: Only mention running the test if the test
	directory is there.

2003-11-11  Michael Banck  <mbanck@gmx.net>

	* configure.in (AC_CHECK_HEADERS): Removed checks for some C++ 
	Standard Library headers (algorithm vector map list iostream